--- a/lab2/msb-consulta/msb-consulta/src/main/resources/application.properties
+++ b/lab2/msb-consulta/msb-consulta/src/main/resources/application.properties
@@ -1,2 +1,5 @@
+spring.application.name=msb-consulta
 server.port=8096
 server.servlet.context-path=/msbconsulta
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#ms-consulta.ribbon.listOfServers=http://localhost:8081,http://localhost:8082
