--- a/lab2/ms-pago/src/main/resources/application.properties
+++ b/lab2/ms-pago/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.application.name=ms-consulta
-server.port=8081
-server.servlet.context-path=/msconsulta
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+server.port=8083
+server.servlet.context-path=/mspago
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
